<resources>
    <string name="app_name">Stay Quiet</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_profile">MI PERFIL</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_settings">Seguridad</string>
    <string name="menu_close_session">Cerrar sesión</string>
    <string name="text_login">ENTRAR</string>
    <string name="text_signup">REGISTRAR</string>
    <string name="text_forgot">¿Olvidaste la contraseña?</string>
    <string name="text_remember">Recordar contraseña</string>
    <string name="text_username">Nombre de usuario</string>
    <string name="text_name">Nombre</string>
    <string name="text_email">Correo Electrónico</string>
    <string name="text_phoneNumber">Número de Celular</string>
    <string name="text_password">Contraseña</string>
    <string name="text_password_confirmation">Confirmación de contraseña</string>
    <string name="text_activity_profile_1">Aquí podrás modificar tus datos</string>
    <string name="text_activity_add_protec_1">Introduce los datos de contacto</string>
    <string name="text_activity_verify_phone_1">Ingrese el código de verificación que se envió a su teléfono</string>
    <string name="text_activity_security_1">Ingresa tu contraseña para confirmar</string>
    <string name="text_activity_recovery_1">No recuerdas la contraseña?</string>
    <string name="text_activity_recovery_2">Ingresa tu correo electronico para que te enviemos la contraseña</string>
    <string name="text_activity_change_1">Ingresa contraseña</string>
    <string name="text_activity_edit_protected_1">Modifica los datos de tu protegido.</string>
    <string name="text_add_protected">Escribe el nombre de usuario a agregar.</string>
    <string name="text_pwd">Contraseña anterior</string>
    <string name="text_pwd_1">Nueva contraseña</string>
    <string name="text_pwd_2">Confirmar contraseña</string>
    <string name="text_code">Código</string>
    <string name="btn_save">GUARDAR</string>
    <string name="btn_verify">VERIFICAR</string>
    <string name="btn_continue">CONTINUAR</string>
    <string name="btn_recovery">SIGUIENTE</string>
    <string name="btn_add">AGREGAR</string>
    <string name="MSJ1.1">ERROR. Campos incompletos.</string>
    <string name="MSJ1.2">ERROR. Solo se permiten letras.</string>
    <string name="MSJ1.3">ERROR. Solo se permiten números.</string>
    <string name="MSJ1.4">ERROR. La contraseña es débil.</string>
    <string name="MSJ1.5">ERROR. No coincide la contraseña.</string>
    <string name="MSJ1.6">ERROR. No se puede conectar a la base de datos.</string>
    <string name="MSJ1.7">Advertencia. Usuario y/o contraseña incorrectos.</string>
    <string name="MSJ1.9">Advertencia. Contraseña incorrecta.</string>
    <string name="MSJ1.10">ERROR. Solo el formato de correo incorrecto: example@mail.com.</string>
    <string name="MSJ1.31">ERROR. Código de verificación inválido.</string>
    <string name="MSJ1.32">ERROR. No fué posible realizar la verificación del teléfono.</string>
    <string name="MSJ1.33">ERROR. No fué posible asociar su número de celular.</string>
    <string name="MSJ1.34">Error. Verifique su teléfono celular.</string>
    <string name="MSJ1.35">Advertencia. Modifique algun campo.</string>
</resources>
