<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="androides.stayquiet.ProfileActivity">
    
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvTitle"
            style="@style/textHight"
            android:layout_marginTop="20dp"
            android:text="@string/text_activity_profile_1"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="parent"/>

        <LinearLayout
            style="@style/divider"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            android:id="@+id/divider"/>

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="121dp"
            android:layout_height="121dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:src="@drawable/boy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lyNickName"
            style="@style/element"
            app:layout_constraintTop_toBottomOf="@+id/imageProfile">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etNickName"
                style="@style/editText"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:hint="@string/text_nickname"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lyName"
            style="@style/element"
            app:layout_constraintTop_toBottomOf="@+id/lyNickName">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etName"
                style="@style/editText"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:hint="@string/text_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lyEmail"
            style="@style/element"
            app:layout_constraintTop_toBottomOf="@+id/lyName">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/editText"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:hint="@string/text_email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lyPhoneNumber"
            style="@style/element"
            app:layout_constraintTop_toBottomOf="@+id/lyEmail">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPhoneNumber"
                style="@style/editText"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:hint="@string/text_phoneNumber"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSave"
            style="@style/element"
            android:background="@drawable/layout_border_blue"
            app:layout_constraintTop_toBottomOf="@+id/lyPhoneNumber"
            android:text="@string/btn_save" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
