<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/textHight"
            android:layout_marginTop="20dp"
            android:text="@string/text_activity_recovery_1"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="15dp" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/textHight"
            android:layout_marginTop="76dp"
            android:text="@string/text_activity_recovery_2"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="15dp" />

        <RelativeLayout
            android:id="@+id/lyCode"
            style="@style/element"
            android:layout_height="50dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/layout_border"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:layout_editor_absoluteX="34dp">

            <TextView
                android:id="@+id/tvCode"
                style="@style/textNormal"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical"
                android:text="@string/text_email"
                android:textColor="@color/colorGrayH" />

            <EditText
                android:id="@+id/etCode"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="0dp"
                android:background="@android:color/transparent"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_remove_circle"
                android:hint="example@mail.com"
                android:inputType="phone"
                app:layout_constraintRight_toRightOf="@+id/tvCode" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnVerify"
            style="@style/element"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/layout_border_blue"
            android:text="@string/btn_recovery"
            app:layout_constraintTop_toBottomOf="@+id/lyCode"
            tools:layout_editor_absoluteX="15dp" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>