<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="androides.stayquiet.EditProtectedActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            style="@style/textHight"
            android:id="@+id/tvTitle"
            android:layout_marginTop="20dp"
            android:text="@string/text_activity_edit_protected_1"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout style="@style/divider"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            android:id="@+id/linearLayout"/>

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="121dp"
            android:layout_height="121dp"
            android:clickable="true"
            android:src="@drawable/boy"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="15dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="15dp" />

        <RelativeLayout
            android:background="@drawable/layout_border"
            android:layout_height="50dp"
            style="@style/element"
            app:layout_constraintTop_toBottomOf="@+id/imageProfile"
            android:layout_marginTop="15dp"
            android:id="@+id/lyName">

            <TextView
                android:gravity="center_vertical"
                style="@style/textNormal"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/text_name"
                android:textColor="@color/colorGrayH"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="0dp"
                android:id="@+id/tvName"/>

            <EditText
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="0dp"
                android:background="@android:color/transparent"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_remove_circle"
                android:inputType="textPersonName"
                app:layout_constraintRight_toRightOf="@+id/tvName"
                android:id="@+id/etName"/>
        </RelativeLayout>

        <RelativeLayout
            android:background="@drawable/layout_border"
            android:layout_height="50dp"
            style="@style/element"
            app:layout_constraintTop_toBottomOf="@+id/lyName"
            android:layout_marginTop="10dp"
            android:id="@+id/lyEmail">

            <TextView
                android:gravity="center_vertical"
                style="@style/textNormal"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/text_email"
                android:textColor="@color/colorGrayH"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="0dp"
                android:id="@+id/tvEmail"/>

            <EditText
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="0dp"
                android:background="@android:color/transparent"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_remove_circle"
                android:inputType="textEmailAddress"
                app:layout_constraintRight_toRightOf="@+id/tvEmail"
                android:id="@+id/etEmail"/>
        </RelativeLayout>

        <RelativeLayout
            android:background="@drawable/layout_border"
            android:layout_height="50dp"
            style="@style/element"
            app:layout_constraintTop_toBottomOf="@+id/lyEmail"
            android:layout_marginTop="10dp"
            android:id="@+id/lyPhoneNumber">

            <TextView
                android:gravity="center_vertical"
                style="@style/textNormal"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/text_phoneNumber"
                android:textColor="@color/colorGrayH"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="0dp"
                android:id="@+id/tvPhoneNumber"/>

            <EditText
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="0dp"
                android:background="@android:color/transparent"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_remove_circle"
                android:inputType="number"
                app:layout_constraintRight_toRightOf="@+id/tvPhoneNumber"
                android:id="@+id/etPhoneNumber"/>
        </RelativeLayout>

        <RelativeLayout
            android:background="@drawable/layout_border"
            android:layout_height="50dp"
            style="@style/element"
            app:layout_constraintTop_toBottomOf="@+id/lyPhoneNumber"
            android:layout_marginTop="10dp"
            android:id="@+id/lyPassword">

            <TextView
                android:gravity="center_vertical"
                style="@style/textNormal"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/text_password"
                android:textColor="@color/colorGrayH"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="0dp"
                android:id="@+id/tvPassword"/>

            <EditText
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="0dp"
                android:background="@android:color/transparent"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_remove_circle"
                android:inputType="textPassword"
                android:hint="********"
                app:layout_constraintRight_toRightOf="@+id/tvPassword"
                android:id="@+id/etPassword"/>
        </RelativeLayout>

        <RelativeLayout
            android:background="@drawable/layout_border"
            android:layout_height="50dp"
            style="@style/element"
            app:layout_constraintTop_toBottomOf="@+id/lyPassword"
            android:layout_marginTop="10dp"
            android:id="@+id/lyPasswordConf">

            <TextView
                android:gravity="center_vertical"
                style="@style/textNormal"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/text_password_confirmation"
                android:textColor="@color/colorGrayH"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="0dp"
                android:id="@+id/tvPasswordConf"/>

            <EditText
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="0dp"
                android:background="@android:color/transparent"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_remove_circle"
                android:inputType="textPassword"
                android:hint="********"
                app:layout_constraintRight_toRightOf="@+id/tvPasswordConf"
                android:id="@+id/etPasswordConf"/>
        </RelativeLayout>

        <Button
            style="@style/element"
            android:layout_height="50dp"
            android:text="@string/btn_save"
            android:background="@drawable/layout_border_blue"
            app:layout_constraintTop_toBottomOf="@+id/lyPasswordConf"
            android:layout_marginTop="15dp"
            android:id="@+id/btnSave"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
