<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="androides.stayquiet.SecurityActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <ProgressBar
            android:id="@+id/pbSecurity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/textHight"
            android:layout_marginTop="20dp"
            android:text="@string/text_activity_security_1"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="15dp" />

        <ImageView
            android:id="@+id/ivSecurity"
            android:layout_width="129dp"
            android:layout_height="87dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@mipmap/ic_shield"
            tools:layout_editor_absoluteY="71dp"
            android:layout_below="@+id/tvTitle"
            android:layout_centerInParent="true"/>

        <RelativeLayout
            android:background="@drawable/layout_border"
            android:layout_height="50dp"
            style="@style/element"
            android:layout_below="@+id/ivSecurity"
            android:layout_marginTop="15dp"
            android:id="@+id/lyPassword">

            <TextView
                android:gravity="center_vertical"
                style="@style/textNormal"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/text_password"
                android:textColor="@color/colorGrayH"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="0dp"
                android:id="@+id/tvPassword"/>

            <EditText
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="0dp"
                android:background="@android:color/transparent"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_remove_circle"
                android:inputType="textPassword"
                android:hint="********"
                app:layout_constraintRight_toRightOf="@+id/tvPassword"
                android:id="@+id/etPassword"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btnContinue"
            style="@style/element"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/layout_border_blue"
            android:text="@string/btn_continue"
            app:layout_constraintTop_toBottomOf="@+id/lyCode"
            tools:layout_editor_absoluteX="15dp"
            android:layout_below="@+id/lyPassword"/>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>